public/css/main.css
/* ... */
a:hover {
  color: var(--link-hover-color) !important;
}

a:focus {
  color: var(--link-hover-color) !important;
}

a:visited {
  color: var(--link-visited-color);
}

a.unstyled {
  font-size: 1rem;
}

a.inverted {
  color: var(--depth-1) !important;
}

a.inverted:hover {
  color: var(--depth-0) !important;
}

a.outline-hover:hover {
  -webkit-text-fill-color: transparent;
  -webkit-text-stroke-color: currentColor;
  -webkit-text-stroke-width: 0.012em;
}

ol {
  counter-reset: a;
  padding-left: 18px;
}

ul, ol {
  list-style: none;
  padding-left: 0;
}

ol > li:not(.surpress-numbering) {
  position: relative;
  padding-left: 25px;
}

ol > li:not(.surpress-numbering)::before {
  content: counter(a, decimal-leading-zero) ".";
  width: 25px;
  color: var(--contrast-color);
  counter-increment: a;
  font-size: 0.777777em;
  position: absolute;
  left: 0;
  margin-top: 0.2em;
}

ul.spaced > li {
  margin-bottom: 1em;
}

ul.spaced-m > li {
  margin-bottom: 0.5em;
}

li.active > a {
  color: var(--heading-color) !important;
  font-weight: 400;
}

#header {
  background-color: var(--bg-color);
  height: 70px;
  transition: background 0.3s;
}

#header .header-top, #header .header-main, #header {
  border-color: #E6EAEA;
}

#header .header-main {
  display: flex;
  height: 70px;
  border-bottom: 1px solid #E6EAEA;
  border-bottom-color: #e6eaea;
}

#header .header-main > .box-right {
  display: flex;
  justify-content: flex-end;
  flex: 1;
}

#header .item {
  padding: 0 23px;
  height: 70px;
  cursor: pointer;
  overflow: hidden;
}

.navigation {
  background-color: var(--navigation-color);
  border-bottom: 2px solid var(--navigation-border-color);
  float: none;
  padding: 1.5em 0 0 0 !important;
}

.navigation > .row {
  margin: 0 auto;
  max-width: 1300px;
}

.logo > img {
  height: 40px;
  margin-top: 15px;
  -webkit-transition: 550ms;
  transition: 550ms;
  opacity: 100%;
}

.logo > img:hover {
  opacity: 60%;
}

ul.nav {
  margin: 0;
  overflow: hidden;
}

ul.nav a {
  font-size: 0.9rem;
  font-weight: 500;
  color: var(--text-color);
}

ul.nav li.item {
  padding: 23px !important;
}

ul.nav li {
  float: left;
}

.float-right {
  float: right;
}

hr {
  opacity: 0.3;
  margin-bottom: 1.85rem;
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

.uppercase {
  text-transform: uppercase;
}

.headline h1, h2, h3, h4 {
  margin: 0;
}

.headline .subtitle {
  font-size: 1em;
}

.subtitle {
  font-size: 0.6em;
}

.suptitle {
  position: absolute;
  left: 0;
  top: 0;
  margin-bottom: 1em;
  font-size: 0.3em;
}

img.icon {
  margin-top: -0.25rem;
  margin-right: 0.5rem;
  vertical-align: middle;
  opacity: 0.5;
  -webkit-transition: all 0.2s;
  -moz-transition: all 0.2s;
  -ms-transition: all 0.2s;
  -o-transition: all 0.2s;
  transition: all 0.2s;
}

img.icon:hover {
  opacity: 1;
}

.image {
  max-width: 100%;
}

.header-image {
  max-width: 1em;
  height: auto;
  vertical-align: middle;
  margin: -0.2em 0.5em 0 0;
}

hr {
  border-top: 0.2px solid var(--text-color);
}

footer {
  padding-bottom: 3em !important;
  padding-top: 3em !important;
  margin: 3em 0 0 0;
  color: var(--white) !important;
  background-color: var(--footer-bg-color);
}

footer h4 {
  color: var(--depth-1);
}

footer a {
  color: var(--white) !important;
}

footer a:hover {
  color: var(--white) !important;
}

footer .small {
  font-size: 12px;
  color: var(--depth-1);
}

.text-center {
  text-align: center;
}

.center {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  width: 100%;
}

::selection {
  background: var(--selection-bg-color);
  color: var(--selection-color);
  text-shadow: 0 0 0 transparent;
}

.intro > p {
  font-size: 1.7em;
  font-weight: 100;
  line-height: 1.3;
}

.sidebar-footer {
  position: absolute;
  bottom: 4em;
  left: 1em;
}

.button {
  background-color: var(--btn-bg-color);
  color: var(--btn-color);
  padding: 0.8em 1.5em;
  border-radius: 4px;
  border: 0;
  transition: 0.3s;
}

.button:hover {
  background-color: var(--contrast-color-bright);
  cursor: pointer;
}

.text-inline {
  display: inline-block;
}

.breadcrumbs span.breadcrumb {
  background: #aaaaa0;
  background: linear-gradient(90deg, #EB2C37, blue);
  height: 1.25rem;
  width: 1.25rem;
  border-radius: 50%;
  vertical-align: sub;
  transition: all 0.2s ease-in-out;
  margin-right: 1em;
}

.p6 {
  width: 60%;
}

.p7 {
  width: 70%;
}

.p8 {
  width: 80%;
}

.p9 {
  width: 90%;
}

.ext:after {
  content: "↗︎";
  font-size: 0.7em;
  display: inline-block;
}

.card {
  background-color: var(--greyish);
  box-sizing: border-box;
  padding: 1em 2.5em;
}

.card > p {
  font-size: 0.9rem !important;
}

.article-preview-title {
  font-size: 0.8em !important;
  font-family: Monospaced, monospace;
  text-align: center;
  font-weight: 300;
}

.article-preview {
  position: relative;
}

.article-preview .preview-figure {
  width: 100%;
  height: 100%;
  min-width: 100%;
  min-height: 100%;
  position: relative;
  margin: 0px;
  padding: 0px;
}

.article-preview .preview-image {
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
  object-fit: cover;
  transition: 0.1s linear;
  -webkit-transition: 0.1s linear;
  -moz-transition: 0.1s linear;
  -o-transition: 0.1s linear;
}

.article-preview:hover .preview-image, .article-preview-title {
  opacity: 0.7;
}

.tag {
  padding: 6px 12px;
  color: var(--contrast-color);
  background-color: var(--contrast-color-bright);
  font-size: 0.7rem;
  font-weight: 500;
}

.hero.row {
  background-color: var(--contrast-color);
  display: flex;
  align-items: center;
  font-size: 1.5rem;
}

.hero.row > div {
  margin-top: 0;
  margin-bottom: 0;
}

.hero > .feature-image {
  margin: 0;
  line-height: 0;
}

.light-box {
  background-color: var(--crema);
  padding: 1em;
}

/* Used on the links page */
.masonry-inner {
  padding: 1em;
}

/* Dark/Light mode switch */
.switch-wrapper {
  position: absolute;
  top: 0;
  right: 0;
  width: 1.5em;
  height: 1.5em;
}
/* ... */

